2007-07-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/linkcmds.brs5l: Add .jcr section.

2007-07-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* README.IceCube: New file.

2007-07-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* console/console.c: Fix typo accidentally introduced.
	* network_5200/network.c: Fix warning.

2007-07-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/linkcmds.ep5200: Add .jcr section.

2007-07-10	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* bsp_specs, startup/linkcmds, startup/linkcmds.pm520: 
	add c++ support again
	* preinstall.am: some fixes

2007-07-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am: Add startup/bspclean.c
	* console/console.c: Remove warning.
	* include/bsp.h: Add conditionals for prompt for reset and resetting
	board.
	* start/start.S: Remove if 1 around section.
	* vectors/vectors_init.c: Do not print unless noisy init enabled.
	* startup/bspclean.c: New file. Will prompt for reset and reset.

2007-07-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* clock/clock.c, console/console.c: Add clock HW initialization missed
	in earlier conversion.

2007-07-06	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* irq_init.c, Makefile.am: adapted to shared exception code

2007-06-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* clock/clock.c, network_5200/network.c: Convert to using clock driver
	template.

2007-06-22	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/linkcmds.brs5l: Add missing wild card on .sdata section so
	all class examples build.

2007-06-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* clock/clock.c: Add nanoseconds since last tick support.

2007-06-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	Add Embedded Planets EP5200 which is the same as the Freescale
	5200Lite (a.k.a. IceCube) evaluation board.
	* Makefile.am: Add linkcmds.ep5200.
	Add -DMPC5200_BAPI_LIBC_HEADERS to remove some warnings in bestcomm.
	* preinstall.am: Add linkcmds.ep5200.